Fix x-overflow.. I hope

--- a/public/css/page.css
+++ b/public/css/page.css
@@ -5,6 +5,10 @@
     --transition-amount: 0s;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 body {
     font: 400 20px/1.8 "Lato", sans-serif;
     margin: 0;
